@@ -1,5 +1,9 @@
 2005-10-12  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (loglist_unbold_log): Only unbold when the log is displayed.
+
+2005-10-12  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c: (logname_remove_markup), (loglist_unbold_log),
 	(loglist_selection_changed), (loglist_find_logname),
 	(loglist_bold_log):
